マルチスレッド対応

--- a/gamepadLatencyChecker/MainWindow.xaml
+++ b/gamepadLatencyChecker/MainWindow.xaml
@@ -16,7 +16,7 @@
                 <TextBlock Text="試行回数" Width="70"/>
                 <TextBox Width="50" Text="{Binding TryTimes}"/>
             </StackPanel>
-            <Button DockPanel.Dock="Top" Content="実行" Margin="3" Click="Button_Click"/>
+            <Button DockPanel.Dock="Top" Content="実行" Margin="3" Command="{Binding StartButtonCommand}"/>
             <ListBox Margin="3" ItemsSource="{Binding ResultList}"/>
         </DockPanel>
     </Grid>
